grid bug fix: too big lesson block if main area is lesser than 100vh, bigger horizontal margin (scrollbar cannot cover group and classroom anymore)

--- a/src/styles/Lesson.scss
+++ b/src/styles/Lesson.scss
@@ -45,7 +45,7 @@
       .lesson__bottom-panel {
         display: flex;
         justify-content: space-between;
-        margin: 0.2rem 0.4rem;
+        margin: 0.2rem 1rem;
         min-height: 0;
         .lesson__info-field {
           display: flex;
