--- a/src/styles/Schedule.scss
+++ b/src/styles/Schedule.scss
@@ -18,13 +18,8 @@
 
   grid-auto-flow: column;
   grid-auto-columns: 120px 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 4em 1fr;
+  grid-template-rows: 4em;
   @media screen and (min-width: 1224px) {
-  }
-}
-@media (min-width: 900px) {
-  .main {
-    margin-right: 14px;
   }
 }
 .mobile-main {
