--- a/src/styles/SettingsPanel.scss
+++ b/src/styles/SettingsPanel.scss
@@ -20,14 +20,10 @@
     text-align: center;
   }
 
-  .search {
-    width: 100%;
-
+  button.search {
     color: #c7c7c7;
     font-weight: bold;
-  }
 
-  button.search {
     padding: 14px;
     width: 80%;
     background: rgba(255, 255, 255, .1);
